# bindex-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.ci  LICENSE  README.md  bindex.sh  electrum.sh  pyproject.toml  run.sh
.github/workflows/: ci.yml  rust.yml  tag.yml
bindex-cli/: Cargo.toml
bindex-lib/: Cargo.toml
bindex-lib/src/: chain.rs  cli.rs  client.rs  db.rs  headers.rs  index.rs  lib.rs  network.rs  store.rs
bindex-lib/src/address/: cache.rs  mod.rs  schema.rs
bindex-lib/src/cache/: mod.rs  schema.sql
bindex-lib/src/index/: header.rs  mod.rs  scripthash.rs  sptweak.rs  txid.rs  txpos.rs
bindex-lib/src/tests/signet/: bip352_tweaks_00000012c5a8005cd56f2cb97334b038fc6dc442c1c1682ba9065e4402b3eaa0.json  bip352_tweaks_0000007d60f5ffc47975418ac8331c0ea52cf551730ef7ead7ff9082a536f13c.json
contrib/: history.sql
electrum/: events.py  merkle.py  server.py
electrum/indexer/: Cargo.toml
electrum/indexer/src/: main.rs
src/: chain.rs  client.rs  db.rs  index.rs  lib.rs
src/address/: cache.rs  mod.rs
src/index/: address.rs
src/index/address/: cache.rs
