[package]
name = "bindex"
version = "0.0.6"
edition = "2021"
authors = ["Roman Zeyde <me@romanzey.de>"]
description = "Bitcoin indexing library in Rust"
license = "MIT"
homepage = "https://github.com/romanz/bindex-rs"
repository = "https://github.com/romanz/bindex-rs"
keywords = ["bitcoin", "index", "database"]
documentation = "https://docs.rs/bindex/"
readme = "README.md"


[dependencies]
bitcoin = { version = "0.32" }
bitcoin_slices = { version = "0.10", features = ["bitcoin"] }
env_logger = "0.11"
hex = "0.4"
log = "0.4"
rocksdb = { version = "0.23", default-features = false, features = ["zstd"]}
thiserror = "2.0"
ureq = { version = "3", default-features = false }

tabled = "0.18"
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive"] }
rusqlite = "0.33"

[dev-dependencies]
hex_lit = "0.1"
