[package]
name = "bindex-cli"
version = "0.0.16"
edition = "2021"
authors = ["Roman Zeyde <me@romanzey.de>"]
description = "Bitcoin indexing CLI in Rust"
license = "MIT"
homepage = "https://github.com/romanz/bindex-rs"
repository = "https://github.com/romanz/bindex-rs"
keywords = ["bitcoin", "index", "database", "cli"]
documentation = "https://docs.rs/bindex/"
readme = "../README.md"


[dependencies]
bindex = { path = "../bindex-lib", features = ["cache"] }
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive", "string"] }
env_logger = "0.11"
log = "0.4"
rusqlite = "0.37"
tabled = "0.20"
