[package]
name = "bindex"
version = "0.0.16"
edition = "2021"
authors = ["Roman Zeyde <me@romanzey.de>"]
description = "Bitcoin indexing library in Rust"
license = "MIT"
homepage = "https://github.com/romanz/bindex-rs"
repository = "https://github.com/romanz/bindex-rs"
keywords = ["bitcoin", "index", "database"]
documentation = "https://docs.rs/bindex/"
readme = "../README.md"

[features]
cache = ["dep:rusqlite"]

[dependencies]
bitcoin = { version = "0.32", default-features = false }
bitcoin_slices = { version = "0.10", features = ["bitcoin"] }
log = "0.4"
thiserror = "2.0"
ureq = { version = "3", default-features = false }
rusqlite = { version = "0.37", optional = true }
rust-rocksdb = { version = "0.36.0", default-features = false, features = ["zstd"] }

[dev-dependencies]
hex_lit = "0.1"
# bitcoind path should be specified via BITCOIND_EXE
corepc-node = { version = "0.10", default-features = false, features = ["29_0"] }
tempfile = "3"
