[package]
name = "electrum-indexer"
version = "0.0.10"
edition = "2021"
authors = ["Roman Zeyde <me@romanzey.de>"]
description = "Electrum indexer & basic server"
license = "MIT"
homepage = "https://github.com/romanz/bindex-rs"
repository = "https://github.com/romanz/bindex-rs"
keywords = ["bitcoin", "index", "database", "cli"]
documentation = "https://docs.rs/bindex/"
readme = "../README.md"


[dependencies]
bindex = { path = "../../bindex-lib" }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rusqlite = "0.34"
